RESOLVED FIXED23800
Header elements are not always preserved during paste
https://bugs.webkit.org/show_bug.cgi?id=23800
Summary Header elements are not always preserved during paste
Justin Garcia
Reported 2009-02-06 15:04:53 PST
Go to http://www.psc.edu/science/ALCOA/ALCOA-light.html in Safari Select and copy the bolded word Lightweighting at the top of the page Paste as HTML into a new empty email The text looks the same but it's not inside an H3, like the original. This impacts the Leopard Server WiKis, as it makes it difficult to remove the H3 styling (it has to be done manually instead of with the paragraph mode controls). <rdar://problem/4128080>
Attachments
patch (8.14 KB, patch)
2009-02-06 15:07 PST, Justin Garcia
oliver: review+
Justin Garcia
Comment 1 2009-02-06 15:07:09 PST
Oliver Hunt
Comment 2 2009-02-06 15:12:56 PST
Comment on attachment 27422 [details] patch > Index: LayoutTests/editing/execCommand/4128080-2.html > =================================================================== > --- LayoutTests/editing/execCommand/4128080-2.html (revision 0) > +++ LayoutTests/editing/execCommand/4128080-2.html (revision 0) > \ No newline at end of file > Index: LayoutTests/editing/execCommand/4128080-1.html > =================================================================== > --- LayoutTests/editing/execCommand/4128080-1.html (revision 0) > +++ LayoutTests/editing/execCommand/4128080-1.html (revision 0) > \ No newline at end of file You should add newlines :D r=me
Note You need to log in before you can comment on or make changes to this bug.