WebCore:

2009-02-06  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=23800
        Header elements are not always preserved during paste

        At paste time, don't merge out of header elements.  At copy time, be sure to include
        headers in the list of special common ancestor blocks, so that copying a paragraph or less
        of content inside a header will include the header element in the copied markup.

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::areSameHeaderElements):
        (WebCore::ReplaceSelectionCommand::shouldMerge):
        * editing/markup.cpp:
        (WebCore::isSpecialAncestorBlock):
        (WebCore::createMarkup):

LayoutTests:

2009-02-06  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=23800
        Header elements are not always preserved during paste

        * editing/execCommand/4128080-1-expected.txt: Added.
        * editing/execCommand/4128080-1.html: Added.
        * editing/execCommand/4128080-2-expected.txt: Added.
        * editing/execCommand/4128080-2.html: Added.



Canonical link: https://commits.webkit.org/32880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40741 268f45cc-cd09-0410-ab3c-d52691b4dbfc